--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
     "tailwindcss": "^4.1.5",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
